# life_admin_dbt

./: .gitignore  .user.yml  README.md  dbt_project.yml  lightdash_workflow.md  packages.yml  profiles.yml  pyproject.toml  ticktick_fetcher.py
.github/workflows/: CD.yml  CI.yml  LD_write_back.yml  airbyte_dbt_trigger.yml  dbt_docs.yml  dbt_snapshot.yml  grafana_contract_ci.yml  grafana_write_back.yml  lightdash-deploy.yml  run_dbt.yml  serverless_snapshot.yml  todoist_EL.yml
EL/ticktick/: fetch_ticktick.py
EL/ticktick/v3/: README.md  pyproject.toml
EL/ticktick/v3/config/: ticktick_check.curl.example
EL/ticktick/v3/docker/: .env.example  Dockerfile  docker-compose.yml
EL/ticktick/v3/poller/: __init__.py  auth.py  client.py  config.py  db.py  emitter.py  main.py  models.py  repository.py  schemas.py  service.py  webapp.py
EL/todoist/: fetch_todoist.py
docs/grafana/: grafana-guardrails-contracts.md  lookahead-chart-spec.md
grafana/: README.md
grafana/contracts/: README.md  registry.yaml
grafana/scripts/: README.md  export_grafana_artifacts.py  pyproject.toml
gsd-lite/: ARCHITECTURE.md  HISTORY.md  INBOX.md  PROJECT.md  WORK.md
gsd-lite/template/: ARCHITECTURE.md  PROJECT.md  WORK.md
lightdash/charts/: copy-of-distribution-by-parent-dimension-1762588095829.yml  tmp.yml  (+29 more)
macros/: drop_ci_schema.sql  select_source_columns.sql
memory-bank/: activeContext.md  decisionLog.md  migration_plan.md  productContext.md  progress.md  systemPatterns.md
models/: __sources.yml  lightdash_exposures.yml  snp_projects.sql  snp_tasks.sql
snapshots/: snapshots.yml
(+99 files in other folders)
