[project]
name = "ticktick-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.10.1",
    "dbt-duckdb>=1.9.4",
    # "dbt-osmosis==1.1.14",
    "elementary-data[bigquery]>=0.19.5",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "requests-ratelimiter>=0.7.0",
    "sqlmodel>=0.0.24",
]
[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
]