[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ticktick-v3-poller"
version = "0.1.0"
description = "TickTick v3 poller and operator webapp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.0",
  "fastapi>=0.116.1",
  "pydantic>=2.11.7",
  "requests>=2.32.5",
  "sqlmodel>=0.0.24",
  "uvicorn>=0.35.0",
]

[project.scripts]
ticktick-v3-poller = "poller.main:main"

[tool.hatch.build.targets.wheel]
packages = ["poller"]